# etl-ia-generativa-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml
data/input/: usuarios.csv
data/output/: mensagens_geradas.csv
src/: extract.py  load.py  main.py  transform.py
tests/: test_extract.py  test_load.py  test_transform.py
