[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-ia-generativa-python"
version = "0.1.0"
description = "Pipeline ETL com IA Generativa em Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Seu Nome", email = "seu-email@exemplo.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "pandas",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
